Center layout when on mobile.

--- a/tribute/style.css
+++ b/tribute/style.css
@@ -68,5 +68,9 @@ li{
            max-width: 85%;
            margin: 0 2rem;
        }
+
+       article {
+           margin: 0 2rem;
+       }
    }
    
