--- a/tribute/style.css
+++ b/tribute/style.css
@@ -1,24 +1,26 @@
 @import url('https://fonts.googleapis.com/css?family=Quicksand');
 
 body {
+    background: #ADC4E8;
     margin: 0;
     padding: 0;
 }
 
-body {
-    background: #ADC4E8;
-}
-
 #container {
-    width: 40%;
+    width: 60%;
     margin: auto;
     text-align: center;
     font-family: 'Quicksand', sans-serif;
     background: white;
 }
 
+#tribute-info {
+    padding: 1.5rem 2rem 1.5rem 1rem;
+    text-align: left;
+}
+
 figure {
-    max-width: 50%;
+    max-width: 80%;
     margin: auto;
 }
 
@@ -35,12 +37,6 @@ img {
     margin: auto;
 }
 
-article {
-    text-align: left;
-    margin-left: 2rem;
-    padding-bottom: 2rem;
-}
-
 ul {
     padding: 0;
     list-style-type: square;
@@ -54,23 +50,23 @@ a {
     color: #2C68C8;
 }
 
-li{
+li {
     margin: 1rem;
-   }
+}
 
-   @media (max-width: 640px) {
-       #container {
-           width: 100%;
-           padding: 0;
-       }
+@media (max-width: 1000px) {
+    #container {
+        width: 75%;
+    }
+}
 
-       figure {
-           max-width: 85%;
-           margin: 0 2rem;
-       }
+@media (max-width: 640px) {
+    #container {
+        width: 100%;
+        padding: 0;
+    }
 
-       article {
-           margin: 0 2rem;
-       }
-   }
-   
+    figure {
+        max-width: 85%;
+    }
+}
