--- a/Survey/style.css
+++ b/Survey/style.css
@@ -23,17 +23,21 @@ body {
 }
 
 #submit {
-    border-radius: 7px;
-    border: 2px solid;
+    border-radius: 3px;
+    border: 3px solid;
     font-weight: bolder;
     min-width: 100px;
     display: block;
-    font-size: 1.5em;
-    padding: 0.5em;
+    font-size: 1.25em;
+    padding: 0.25em;
     margin: 3rem auto;
-    background: #FFFB5D;
-    color: #585724;
 }
+
+#submit:hover {
+    background: #26C6DA;
+    cursor: pointer;
+    transition: all 50ms linear;
+  }
 
 h1 {
     margin-bottom: 1rem;
@@ -62,16 +66,29 @@ textarea {
 
 #form-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 0.75fr 2fr;
     grid-row-gap: 2em;
     align-items: flex-start;
     margin: 1.5rem 0;
+}
+
+.question {
+    color: #004353;
+    font-weight: bolder;
 }
 
 ul {
     list-style: none;
     padding: 0;
     margin: 0;
+}
+
+li {
+    margin-bottom: 0.5em;
+}
+
+label {
+    padding-right: 0.75em;
 }
 
 @media (max-width: 640px) {
@@ -92,6 +109,7 @@ ul {
     label {
         margin: 0;
     }
+    
     input,
     select,
     textarea {
@@ -101,5 +119,7 @@ ul {
     #submit {
         width: 75%;
         margin: auto;
+        font-size: 2em;
+        padding: 0.75em;
     }
 }
