--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -12,14 +12,13 @@ body {
     background-color: whitesmoke;
     padding-bottom: 2em;
     font-size: 100%;
-    color: #black;
-    background: #3E506B;
+    background: #113849;
 }
 
 #header {
     display: flex;
     align-items: center;
-    background: #44ADAD;
+    background: #70c1b3;
     position: fixed;
     width: 100%;
     z-index: 10;
@@ -62,13 +61,17 @@ nav {
     text-align: center;
 }
 
+.section {
+    background: #fff;
+}
+
+.section-content {
+    padding: 3em 0;
+}
+
 h2 {
     font-size: 2em;
     background: #fff;
-    margin: 1em 0;
-    margin-left: -1.5em;
-    margin-right: -1.5em;
-
 }
 
 #video {
@@ -77,7 +80,7 @@ h2 {
 }
 
 #offer {
-    background: #FCC82B;
+    background: #7dc6b9;
     font-size: 110%;
 }
 
@@ -97,12 +100,12 @@ h2 {
     text-align: left;
 }
 
-#testimony {
-    background: #E23A59;
+#pricing {
+    background: #f4ffc3;
 }
 
-#pricing {
-    background: white;
+#testimony {
+    background: #ff5582;
 }
 
 #packages {
@@ -120,6 +123,7 @@ h2 {
     background: white;
     border-radius: 5px;
     margin: 0 2%;
+    box-shadow: 0 0 10px -2px rgba(0, 0, 0, 0.5);
 }
 .package-name {
     padding: 0.5em;
@@ -130,11 +134,6 @@ h2 {
 
 .package-offer li {
     margin: 3em 0;
-}
-
-.section {
-    padding: 3em;
-    background: #fff;
 }
 
 #students {
