--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -259,7 +259,20 @@ input[type=submit]:hover {
 #footer li {
     flex: 1 1 1100px;
 }
-
+#video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+}
+#video {
+    position: absolute;
+top:0;
+left: 0;
+width: 100%;
+height: 100%;
+}
 @media (max-width: 1350px) {
     #container {
         width: 90%;
@@ -283,6 +296,8 @@ input[type=submit]:hover {
 }
 
 @media (max-width: 750px) {
+ 
+    
     #packages {
         flex-direction: column;
     }
