--- a/landing-page/style.css
+++ b/landing-page/style.css
@@ -298,6 +298,10 @@ height: 100%;
 @media (max-width: 750px) {
  
     
+    nav {
+        width: 100%;
+    }
+
     #packages {
         flex-direction: column;
     }
