--- a/style.css
+++ b/style.css
@@ -10,76 +10,18 @@
 body {
     background-image: url("bg.jpg");
     background-size: 400px;
-    font-family: 'Inconsolata', monospace;
     color: #568e9c;
-}
-
-#bg {
-    background-color: rgba(0, 0, 0, 0.6);
-}
-
-#container {
-    padding: var(--main-padding);
-    width: 70%;
-    margin: 0 auto;
-    background: #001623;
-}
-
-#header {
-    display: flex;
-    align-items: flex-end;
-    padding: 5% 0 10% 0;
-}
-
-#name {
-    font-size: 250%;
-    flex: 1 1 100%;
-}
-
-#name h1 {
-    font-size: 50px;
-    color: #006E36;
+    font-family: 'Inconsolata', monospace;
 }
 
 h2 {
     color: hsl(192, 29%, 60%);
 }
+
 h3 {
     color: hsl(192, 29%, 50%);
 }
 
-.showcase-h2 {
-    text-align: center;
-    padding: 1% 5% 0  5%;
-    font-size: 250%;
-    border-top: 1px dashed #657100;
-    border-left: 1px dashed #657100;
-    border-right: 1px dashed #657100;
-    width: 30rem;
-    margin: auto;
-    margin-bottom: 5%;
-}
-
-nav {
-    text-align: right;
-    flex: 1 1 100%;
-    font-size: 150%;
-}
-
-nav a {
-    margin: 0 2%;
-}
-
-#showcase {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: 100px;
-    justify-items:center;
-}
-
-.project {
-    box-shadow: 0 0 100px 10px hsl(202, 100%, 35%);
-}
 a {
     color: #A65B00;
     transition: color 200ms linear;
@@ -89,56 +31,115 @@ a:hover {
     color: #cccde5;
 }
 
-#content {
-    line-height: 2.5;
+#bg {
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
-#about-me {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    font-size: 105%;
+#container {
+    background: #001623;
+    margin: 0 auto;
+    padding: var(--main-padding);
+    width: 70%;
 }
 
+    #header {
+        display: flex;
+        align-items: flex-end;
+        padding: 5% 0 10% 0;
+    }
 
-.about-me:nth-child(1) {
-    padding: 3em 3em 3em 0;
-}
-.about-me:nth-child(3) {
-border-top: 1px dashed #657100;
-border-right: 1px dashed #657100;
-}
+        #header #name {
+            font-size: 250%;
+            flex: 1 1 100%;
+        }
 
-.about-me:nth-child(4) {
-border-bottom: 1px dashed #657100;
-padding: 3em 0 3em 3em;
+            #header #name h1 {
+                font-size: 50px;
+                color: #006E36;
+            }
 
-}
+            #header nav {
+            text-align: right;
+            flex: 1 1 100%;
+            font-size: 150%;
+        }
+        
+            #header nav a {
+                margin: 0 2%;
+            }
+    
+    #content {
+        line-height: 2.5;
+    }
+    
+        #about-me {
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            font-size: 105%;
+        }
+        
+            #about-me .about-me:nth-child(1) {
+                padding: 3em 3em 3em 0;
+            }
+            #about-me .about-me:nth-child(3) {
+            border-top: 1px dashed #66710085;
+            border-right: 1px dashed #66710085;
+            }
+            
+            #about-me .about-me:nth-child(4) {
+            border-bottom: 1px dashed #66710085;
+            padding: 3em 0 3em 3em;
+            
+            }
+            
+            #about-me .about-me:nth-child(5) {
+                border-right: 1px dashed #66710085;
+                height: 300px;
+            }
+            
+            #about-me .about-me:nth-child(4) h2 {
+                margin-top: -2em;
+            }
+        
+        #skills {
+            display: flex;
+            justify-content: flex-start;
+            flex-wrap: wrap;
+            list-style: none;
+        }
+        
+            #skills li {
+                flex: 1 1 50%;
+            }
+            
+            #skills li:before {
+                content: "-";
+            }
 
-.about-me:nth-child(5) {
-    border-right: 1px dashed #657100;
-    height: 300px;
-}
+    #showcase {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-gap: 100px;
+        justify-items:center;
+    }
 
-.about-me:nth-child(4) h2 {
-    margin-top: -2em;
-}
+        #showcase .project {
+            box-shadow: 0 0 100px 10px hsl(202, 100%, 35%);
+        }
+
+        #showcase .showcase-h2 {
+            border-top: 1px dashed #66710085;
+            border-left: 1px dashed #66710085;
+            border-right: 1px dashed #66710085;
+            font-size: 250%;
+            margin: auto;
+            margin-bottom: 5%;
+            padding: 1% 5% 0  5%;
+            text-align: center;
+            width: 30rem;
+        }
 
 
-
-#skills {
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    list-style: none;
-}
-
-#skills li {
-    flex: 1 1 50%;
-}
-
-#skills li:before {
-    content: "-";
-}
 
 footer {
     padding: 10%;
