--- a/style.css
+++ b/style.css
@@ -80,28 +80,9 @@ a:hover {
         }
         
             #about-me .about-me:nth-child(1) {
-                padding: 3em 3em 3em 0;
+                padding: 0 3em 0 0;
             }
-            #about-me .about-me:nth-child(3) {
-            border-top: 1px dashed #66710085;
-            border-right: 1px dashed #66710085;
-            }
-            
-            #about-me .about-me:nth-child(4) {
-            border-bottom: 1px dashed #66710085;
-            padding: 3em 0 3em 3em;
-            
-            }
-            
-            #about-me .about-me:nth-child(5) {
-                border-right: 1px dashed #66710085;
-                height: 300px;
-            }
-            
-            #about-me .about-me:nth-child(4) h2 {
-                margin-top: -2em;
-            }
-        
+
         #skills {
             display: flex;
             justify-content: flex-start;
