--- a/style.css
+++ b/style.css
@@ -17,19 +17,30 @@ body {
 
 h2 {
     color: hsl(192, 29%, 60%);
+    font-size: 190%;
 }
 
 h3 {
     color: hsl(192, 29%, 50%);
+    font-size: 150%;
+}
+
+h4 {
+    color: hsl(192, 29%, 40%);
+    font-size: 130%;
 }
 
 a {
-    color: #A65B00;
+    color: hsl(352, 91%, 39%);
     transition: color 200ms linear;
 }
 
 a:hover {
     color: #cccde5;
+}
+
+section {
+    padding-left: 5%;
 }
 
 #bg {
@@ -39,24 +50,27 @@ a:hover {
 #container {
     background: #001623;
     margin: 0 auto;
-    padding: var(--main-padding);
     width: 70%;
 }
 
     #header {
         display: flex;
         align-items: flex-end;
-        padding: 5% 0 10% 0;
+        padding: 0 0 10% 0;
     }
 
         #header #name {
             font-size: 250%;
-            flex: 1 1 100%;
+            flex: 1 1 100%; 
+            background: #003E63;
+            padding: 3%;
+            text-align: center;
         }
 
             #header #name h1 {
                 font-size: 50px;
-                color: #006E36;
+                color: #001420;
+                
             }
 
             #header nav {
@@ -73,16 +87,17 @@ a:hover {
         line-height: 2.5;
     }
     
-        #about-me {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
+        #about-me .flex-container {
+            display: flex;
+            justify-content: space-between;
             font-size: 105%;
         }
         
-            #about-me .about-me:nth-child(1) {
-                padding: 0 3em 0 0;
-            }
-
+        .about-me {
+            flex: 0 0 50%;
+            max-width: 47%;
+        }
+        
         #skills {
             display: flex;
             justify-content: flex-start;
@@ -104,25 +119,37 @@ a:hover {
         grid-gap: 100px;
         justify-items:center;
     }
+        
 
-        #showcase .project {
-            box-shadow: 0 0 100px 10px hsl(202, 100%, 35%);
-        }
-
-        .showcase-h2 {
-            border-top: 1px dashed #66710085;
-            border-left: 1px dashed #66710085;
-            border-right: 1px dashed #66710085;
-            font-size: 250%;
-            margin: auto;
-            margin-bottom: 5%;
-            padding: 1% 5% 0  5%;
+        .project-header {
+            background: whitesmoke;
+            padding: 4%;
+            font-size: 140%;
             text-align: center;
-            width: 30rem;
+            max-width: 200px;
+            min-height: 3rem;
+            display: flex;
+            align-items: center;
+            justify-content: center;  
         }
 
+        .project-body {
+            min-height: 200px;
+        }
 
+        .project-footer {
+            text-align: center;
+            padding: 10% 0;
+            background: black;
+        }
 
+        .project-footer a {
+            text-decoration: none;
+        }
+
+img {
+    vertical-align: middle;   
+}
 footer {
     padding: 10%;
     text-align: center;
@@ -145,3 +172,13 @@ footer a {
     }
 }
 
+@media (max-width: 700px) {
+    #about-me .flex-container{
+        flex-direction: column;
+    }
+
+    .about-me {
+        margin-bottom: 5%;
+       min-width: 100%;
+    }
+}
